# ImageNarrator

./: .gitignore  README.md  build.sh
datasets/: custom.json  data.json
src/cpp/: CMakeLists.txt  convert.cpp
src/python/: analyze.py
